2009-10-13  David King  <davidk@openismus.com>

	* gtk/src/dialog.hg: Change return type of
	Gtk::Dialog::get_action_area() to Gtk::ButtonBox* from Gtk::HButtonBox*
	to fix breakage on Maemo Fremantle. Fixes bug #597779.
	* tools/m4/convert_gtk.m4: New conversion from GtkWidget* to
	Gtk::ButtonBox*.

2009-10-04  Daniel Elstner  <daniel.kitta@gmail.com>

	Increment version to 2.18.2 and update news

	* configure.ac (AC_INIT): Increment version to 2.18.2.
	(LIBGTKMM_SO_VERSION): Reset revision and increment current and
	age to indicate that API has been added to the library.
	({ATK,GDK,GTK}MM_MODULES): Tighten module version requirements
	to the recent stable releases of every module.
	(MM_PREREQ): Require mm-common 0.8.
	* NEWS: Write news entry for the gtkmm 2.18.2 release.

2009-10-04  Daniel Elstner  <daniel.kitta@gmail.com>

	Resurrect Widget::can_default() and can_focus()

	* gtk/src/widget.{ccg,hg} (Gtk::Widget::can_default): Wrap using
	_WRAP_METHOD(), thereby reintroducing the accidentally removed
	method implementation.
	(can_focus): Use _WRAP_METHOD() to bring back both the declaration
	and the implementation of this accidentally removed method.
	(get_allocation): Properly implement the accessor in terms of
	gtk_widget_get_allocation().

2009-09-22  José Alburquerque  <jaalburqu@svn.gnome.org>

	gtkmm.h: Add infobar.h to list of includes.

	* gtk/gtkmm.h: Add infobar.h.

2.18.1:

2009-09-21  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/recentmanager.hg: Do not deprecate get_default().
	This was a mistake in Daniel's commit on 2009-09-18.

2.18.0:

2009-09-21  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_docs.xml: Regenerated.

2009-09-21  Murray Cumming  <murrayc@murrayc-desktop>

	Regenerate enums .defs.

	* gdk/src/gdk_enums.defs:
	* gtk/src/gtk_enums.defs: Regenerated.
	This adds a Gdk::CURSOR_BLANK, as requested in bug #591029 (Hammered).

2009-09-21  Murray Cumming  <murrayc@murrayc.com>
