@@ -1,3 +1,12 @@
+2009-10-18  Daniel Elstner  <daniel.kitta@gmail.com>
+
+	Correct Gtk::TreeModelColumnRecord documentation
+
+	* gtk/gtkmm/treemodelcolumn.h (Gtk::TreeModelColumnRecord): Remove
+	bogus sentence vaguely cautioning against the use of static variables
+	to implement singletons.  Reword the preceding sentence to avoid this
+	sort of misunderstanding.
+
 2009-10-13  David King  <davidk@openismus.com>
 
 	* gtk/src/dialog.hg: Change return type of
